<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">LINK APP</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="done">Done</string>
    <string name="back">Back</string>
    <string name="delete">Delete</string>
    <string name="upload">Upload</string>
    <string name="deleting">Deleting</string>
    <string name="yes">Yes</string>
    <string name="sending">Sending</string>
    <string name="apply">Apply</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="continue_anyway">Continue</string>
    <string name="qs_title">Quick Setup</string>
    <string name="qs_exit_query">Exit Quick Setup</string>
    <string name="qs_item_pin_code">PIN Code</string>
    <string name="qs_pin_code_prompt">Enter the PIN code\nAttempts Remaining: <xliff:g id="INPUTTIMES">%1$d</xliff:g>time(s)</string>
    <string name="qs_item_wifi_ssid">Wi-Fi Network Name (SSID)</string>
    <string name="qs_wifi_ssid_prompt">The SSID should be 1–32 characters.</string>
    <string name="qs_item_wifi_passwd">Wi-Fi Password</string>
    <string name="qs_wifi_passwd_prompt">The password should be 8–63 characters.</string>
    <string name="qs_wifi_wep_passwd_prompt">The password should be 5 or 13 ASCII characters, or 10 or 26 hexadecimal digits</string>
    <string name="qs_completed">Setup completed</string>
    <string name="qs_summary">Your device is ready to use.</string>
    <string name="qs_wifi_ssid">Wi-Fi Network Name (SSID): <xliff:g id="SSID">%1$s</xliff:g></string>
    <string name="qs_wifi_passwd">Wi-Fi Password: <xliff:g id="PASSWD">%1$s</xliff:g></string>
    <string name="qs_puk_code_title">PUK Code</string>
    <string name="qs_puk_code_prompt">Enter the PUK code\nAttempts Remaining: <xliff:g id="INPUTTIMES">%1$d</xliff:g>time(s)</string>
    <string name="qs_puk_code">PUK Code:</string>
    <string name="qs_pin_code_new">New PIN:</string>
    <string name="qs_pin_code_confirm">Confirm PIN:</string>
    <string name="main_home">Home</string>
    <string name="main_sdsharing">SD Sharing</string>
    <string name="main_usage">Usage</string>
    <string name="main_setting">Settings</string>
    <string name="main_sms">SMS</string>
    <string name="home_GB">GB</string>
    <string name="home_KB">KB</string>
    <string name="home_MB">MB</string>
    <string name="home_B">B</string>
    <string name="Home_unlock_pin">Unlock</string>
    <string name="Home_no_sim">No SIM card</string>
    <string name="Home_sim_invalid">Invalid SIM</string>
    <string name="Home_pin_locked">PIN Locked</string>
    <string name="Home_puk_locked">PUK Locked</string>
    <string name="Home_SimCard_IsIniting">Initializing</string>
    <string name="Home_PukTimes_UsedOut">PUK Attempts Used Up</string>
    <string name="Home_SimLock_Required">SIM Lock required</string>
    <string name="Home_SimCard_Detected">SIM Card detected</string>
    <string name="Home_zero_time">0Hrs 0Mins</string>
    <string name="Home_zero_data">%1$sMB</string>
    <string name="home_no_service">No Service</string>
    <string name="home_initializing">Initializing</string>
    <string name="home_disconnected_to">Disconnected</string>
    <string name="home_connected_to">Connected</string>
    <string name="home_connecting_to">Connecting</string>
    <string name="home_disconnecting_to">Disconnecting</string>
    <string name="home_network_type_2g">2G</string>
    <string name="home_network_type_3g">3G</string>
    <string name="home_network_type_3g_plus">3G+</string>
    <string name="home_network_type_4g">4G</string>
    <string name="home_battery_ischarging">Charging</string>
    <string name="home_battery_completed">Charge completed</string>
    <string name="home_connected_duration">%1$sHrs %2$sMins</string>
    <string name="access_lable">Connected</string>
    <string name="home_sim_loched">SIM Card Locked</string>
    <string name="home_pin_locked_notice">Verify your PIN code in the home menu first.</string>
    <string name="home_no_sim">No SIM card</string>
    <string name="home_sim_not_accessible">SIM card is not accessible</string>
    <string name="home_battery_unit">%</string>
    <string name="home_usage_over_redial_message">Monthly data plan has been used up. If you want to re-dial, please change the monthly values or reset consumption.</string>
    <string name="pop_dialog_usagesetting">Usage Setting</string>
    <string name="pop_dialog_clearhistory">Clear History</string>
    <string name="usage_view_home">Home</string>
    <string name="usage_view_duration">Duration</string>
    <string name="bt_set_monthlydata">Set Monthly Data Plan</string>
    <string name="usage_status_des">No data plan has been set</string>
    <string name="usage_duration">%1$sHrs %2$sMins</string>
    <string name="disconnected_descrition">When data usage reaches Monthly Data Plan.</string>
    <string name="usage_clear_history_success">Clear usage history completed.</string>
    <string name="usage_clear_history_fail">Couldn\'t clear usage history.</string>
    <string name="usage_comsumptionexplain_label">Please disconnect first to enable clear function.</string>
    <string name="usage_setting_title">Usage Settings</string>
    <string name="usage_setting_timelimit">Time Limit</string>
    <string name="usage_setting_settimelimit">Set Time Limit:</string>
    <string name="usage_setting_timeunit">min(s)</string>
    <string name="usage_setting_usage">Usage</string>
    <string name="usage_setting_billingday">Billing Day:</string>
    <string name="usage_setting_dayunit">day</string>
    <string name="usage_setting_monthlysataplan">Monthly Data Plan:</string>
    <string name="usage_setting_monthlyunit">MB</string>
    <string name="usage_setting_dataconsunption">Data Consumption:</string>
    <string name="usage_setting_roaming">Roaming</string>
    <string name="roaming_descrition">Automatically connect even when in roaming.</string>
    <string name="usage_setting_autodisconnected">Auto-Disconnected</string>
    <string name="sms_title">Message</string>
    <string name="sms_empty">No SMS</string>
    <string name="sms_init">SMS Unavailable</string>
    <string name="sms_list_view_draft">%1$d, draft</string>
    <string name="sms_send_fail">Fail</string>
    <string name="sms_report_message">Delivered</string>
    <string name="sms_to">To:</string>
    <string name="sms_new_title">Message</string>
    <string name="sms_error_send_error">Couldn\'t send SMS</string>
    <string name="sms_send_success">Send SMS success.</string>
    <string name="sms_error_message_full_storage">SMS box is full. Delete some SMS to send/save new SMS.</string>
    <string name="sms_delete_multi_success">Delete conversation completed.</string>
    <string name="sms_delete_multi_error">Couldn\'t delete conversation.</string>
    <string name="sms_delete_error">Couldn\'t delete SMS</string>
    <string name="sms_delete_success">Delete SMS completed.</string>
    <string name="sms_number_invalid">Error. Only 3 phone numbers are allowed.</string>
    <string name="sms_save_success">SMS is saved as a draft.</string>
    <string name="sms_save_error">Couldn\'t save SMS.</string>
    <string name="sms_unread_num">(%1$d)</string>
    <string name="device_manage_title">Devices</string>
    <string name="device_manage_connected">Connected Devices (%1$d)</string>
    <string name="device_manage_block">Blocked Devices (%1$d)</string>
    <string name="device_manage_block_btn">Block</string>
    <string name="device_manage_unblock_btn">Unblock</string>
    <string name="device_manage_ip">IP:%1$s</string>
    <string name="device_manage_mac">MAC:%1$s</string>
    <string name="device_manage_set_name_failed">Couldn\'t set.</string>
    <string name="device_manage_name_empty">Device name is invalid.</string>
    <string name="microsd_file">File</string>
    <string name="microsd_videos">Videos</string>
    <string name="microsd_music">Music</string>
    <string name="microsd_pictures">Pictures</string>
    <string name="microsd_no_sdcard">Insert SD card</string>
    <string name="setting_wifi">Wi-Fi</string>
    <string name="setting_account">Account</string>
    <string name="setting_network">Network</string>
    <string name="setting_power">Power Saving</string>
    <string name="setting_sharing">FTP&amp;DLNA</string>
    <string name="setting_sharing_ftp">FTP</string>
    <string name="setting_sharing_dlna">DLNA</string>
    <string name="setting_upgrade">Update</string>
    <string name="setting_device">Device</string>
    <string name="setting_about">About</string>
    <string name="setting_backup">Back up &amp; restore</string>
    <string name="setting_text_2point4G_wifi">2.4G Wi-Fi</string>
    <string name="setting_text_5G_wifi">5G Wi-Fi</string>
    <string name="setting_text_ssid">SSID:</string>
    <string name="setting_text_ssid_broadcast">SSID Broadcast</string>
    <string name="setting_text_passwrod">Password:</string>
    <string name="setting_set_default">Default</string>
    <string name="setting_text_no_passwrod">No Password</string>
    <string name="setting_wifi_set_success">Change Wi-Fi settings completed.</string>
    <string name="setting_wifi_set_failed">Couldn\'t change Wi-Fi settings.</string>
    <string name="setting_wifi_password_security_tip">Security Type:</string>
    <string name="setting_wifi_password_wpa_encryption_tip">Encryption Type:</string>
    <string name="setting_wifi_password_wpa_psw_tip">Wi-Fi Password:</string>
    <string name="setting_wifi_password_wep_encryption_tip">Encryption Type:</string>
    <string name="setting_wifi_password_wep_psw_tip">Wi-Fi Password:</string>
    <string name="setting_wep_password_error_prompt">WEP Key is 5 or 13 ASCII characters, or 10 or 26 hexadecimal digits and WEP 
        Key should be ASCII characters ranging from 32-127, except for: , \" : ;&amp;\.</string>
    <string name="setting_wpa_password_error_prompt">The WPA Pre–Shared Key (PSK) should be 8–63 ASCII characters and WPA PSK should be ASCII characters ranging from 32–127, except for: , \" : ;&amp;\.</string>
    <string name="setting_password_error_prompt">Change Wi-Fi Password Error, please retry after a few minutes!</string>
    <string name="setting_disable_password_error_prompt">Couldn\'t disable Wi-Fi Password</string>
    <string name="setting_titlebar_text_edit">Edit</string>
    <string name="setting_titlebar_text_done">Done</string>
    <string name="setting_title_power">Power Saving</string>
    <string name="setting_title_backup">Back up &amp; restore</string>
    <string name="setting_title_upgrade">Update</string>
    <string name="setting_title_device">Device</string>
    <string name="setting_title_about">About</string>
    <string name="setting_power_smart">Smart</string>
    <string name="setting_power_wifi">Wi-Fi Sleep</string>
    <string name="setting_backup_description">Back up the configuration.</string>
    <string name="setting_backup_btn_backup">Back up</string>
    <string name="setting_restore_description">Restore the configuration.</string>
    <string name="setting_restore_btn_restore">Restore</string>
    <string name="setting_about_version">Version</string>
    <string name="setting_upgrade_no_connection">No connection</string>
    <string name="other_login_warning_title">Login warning</string>
    <string name="confirm_folder_replace">Confirm replace</string>
    <string name="confirm_folder_content">File name already exists.</string>
    <string name="login_other_user_logined_error_forcelogin_msg">There is already an admin session opened. Please close this session before opening a new one.</string>
    <string name="str_data_usage">Data usage is approximate. For actual usage, please refer to your network operator.</string>
</resources>