<com.zhy.android.percent.support.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- Banner -->
    <com.zhy.android.percent.support.PercentRelativeLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_title_background"
        app:layout_heightPercent="9%h">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dimen_10dip"
            android:background="@drawable/back"
            app:layout_heightPercent="60%h"
            app:layout_marginLeftPercent="2%w"
            app:layout_widthPercent="30%h" />

        <TextView
            android:id="@+id/Back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/btn_back"
            android:text="@string/back"
            android:textColor="@color/white"
            app:layout_marginLeftPercent="2%w"
            app:layout_textSizePercent="30%h" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/usage_setting_title"
            android:textColor="@color/white"
            app:layout_textSizePercent="30%h" />

        <TextView
            android:id="@+id/tv_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dimen_10dip"
            android:text="@string/done"
            android:textColor="@color/white"
            app:layout_marginRightPercent="3%w"
            app:layout_textSizePercent="30%h" />

    </com.zhy.android.percent.support.PercentRelativeLayout>

    <!-- Usage Text -->
    <TextView
        android:id="@+id/tv_usage_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_layout"
        android:background="@color/color_connected_view_refresh_bg"
        android:gravity="center_vertical|start|left"
        android:paddingStart="@dimen/dimen_10dip"
        android:text="@string/usage_setting_usage"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_heightPercent="6%h"
        app:layout_paddingLeftPercent="3%w"
        app:layout_textSizePercent="3%h" />

    <!-- Billing day -->
    <com.zhy.android.percent.support.PercentRelativeLayout
        android:id="@+id/rl_billingday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_usage_title"
        app:layout_heightPercent="7%h"
        app:layout_marginLeftPercent="3%w"
        app:layout_marginRightPercent="3%w">

        <TextView
            android:id="@+id/billing_plan_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/usage_setting_billingday"
            android:textColor="@color/black"
            app:layout_textSizePercent="40%h" />

        <TextView
            android:id="@+id/billing_plan_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/usage_setting_dayunit"
            android:textColor="@color/black"
            app:layout_textSizePercent="40%h" />

        <EditText
            android:id="@+id/billing_plan_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/billing_plan_unit"
            android:layout_toStartOf="@id/billing_plan_unit"
            android:background="@drawable/selector_edit_bg"
            android:gravity="center"
            android:inputType="number"
            android:lines="1"
            android:maxLength="8"
            android:textColor="@color/main_title_background"
            app:layout_heightPercent="75%h"
            app:layout_marginRightPercent="3%w"
            app:layout_textSizePercent="40%h"
            app:layout_widthPercent="200%h" />

    </com.zhy.android.percent.support.PercentRelativeLayout>

    <!-- Monthly Data Plan -->
    <com.zhy.android.percent.support.PercentRelativeLayout
        android:id="@+id/rl_monthlydataplan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_billingday"
        app:layout_heightPercent="7%h"
        app:layout_marginLeftPercent="3%w"
        app:layout_marginRightPercent="3%w">

        <TextView
            android:id="@+id/monthly_plan_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/usage_setting_monthlysataplan"
            android:textColor="@color/black"
            app:layout_textSizePercent="40%h" />

        <Spinner
            android:id="@+id/unit_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/unit_selector"
            android:spinnerMode="dialog"
            app:layout_heightPercent="75%h"
            app:layout_widthPercent="10%w" />

        <EditText
            android:id="@+id/monthly_plan_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/unit_selector"
            android:layout_toStartOf="@id/unit_selector"
            android:background="@drawable/selector_edit_bg"
            android:gravity="center"
            android:inputType="number|numberDecimal"
            android:lines="1"
            android:maxLength="8"
            android:textColor="@color/main_title_background"
            app:layout_heightPercent="75%h"
            app:layout_marginRightPercent="3%w"
            app:layout_textSizePercent="40%h"
            app:layout_widthPercent="200%h" />

    </com.zhy.android.percent.support.PercentRelativeLayout>

    <!-- Data Consumption -->
    <com.zhy.android.percent.support.PercentRelativeLayout
        android:id="@+id/rl_dataCosumption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_monthlydataplan"
        app:layout_heightPercent="7%h"
        app:layout_marginLeftPercent="3%w"
        app:layout_marginRightPercent="3%w">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/usage_setting_dataconsunption"
            android:textColor="@color/black"
            app:layout_textSizePercent="40%h" />

        <TextView
            android:id="@+id/consumption_value_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:textColor="@color/main_title_background"
            app:layout_textSizePercent="40%h" />

    </com.zhy.android.percent.support.PercentRelativeLayout>

    <!-- Data consumption des -->
    <TextView
        android:id="@+id/consumption_value_tag1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_dataCosumption"
        android:text="@string/str_data_usage"
        android:textColor="@color/gray11"
        app:layout_marginLeftPercent="3%w"
        app:layout_marginRightPercent="3%w"
        app:layout_textSizePercent="2%h" />

    <!-- Auto Disconnected -->
    <com.zhy.android.percent.support.PercentRelativeLayout
        android:id="@+id/rl_autoDisconnected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/consumption_value_tag1"
        app:layout_heightPercent="7%h"
        app:layout_marginLeftPercent="3%w"
        app:layout_marginRightPercent="3%w">

        <TextView
            android:id="@+id/enable_auto_disconnected_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/usage_setting_autodisconnected"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_textSizePercent="40%h" />

        <Button
            android:id="@+id/enable_auto_disconnected_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/switch_off"
            android:clickable="true"
            app:layout_heightPercent="7%w"
            app:layout_widthPercent="14%w" />

    </com.zhy.android.percent.support.PercentRelativeLayout>

    <!-- Auto Disconnected des -->
    <TextView
        android:id="@+id/enable_disconnected_descrition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_autoDisconnected"
        android:text="@string/disconnected_descrition"
        android:textColor="@color/gray11"
        app:layout_marginLeftPercent="3%w"
        app:layout_marginRightPercent="3%w"
        app:layout_textSizePercent="2%h" />

    <!-- Time Limit -->
    <com.zhy.android.percent.support.PercentRelativeLayout
        android:id="@+id/rl_timelimit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/enable_disconnected_descrition"
        app:layout_heightPercent="7%h"
        app:layout_marginLeftPercent="3%w"
        app:layout_marginRightPercent="3%w">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/usage_setting_timelimit"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_textSizePercent="40%h" />

        <Button
            android:id="@+id/enable_time_limit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/switch_off"
            android:clickable="true"
            app:layout_heightPercent="7%w"
            app:layout_widthPercent="14%w" />

    </com.zhy.android.percent.support.PercentRelativeLayout>

    <!-- set time limit -->
    <com.zhy.android.percent.support.PercentRelativeLayout
        android:id="@+id/rl_setTimeLimit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_timelimit"
        app:layout_heightPercent="7%h"
        app:layout_marginLeftPercent="3%w"
        app:layout_marginRightPercent="3%w">

        <TextView
            android:id="@+id/set_time_limit_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/usage_setting_settimelimit"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_textSizePercent="40%h" />

        <TextView
            android:id="@+id/set_time_limit_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/usage_setting_timeunit"
            android:textColor="@color/black"
            app:layout_textSizePercent="40%h" />

        <EditText
            android:id="@+id/set_time_limit_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/set_time_limit_unit"
            android:layout_toStartOf="@id/set_time_limit_unit"
            android:background="@drawable/selector_edit_bg"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="4"
            android:textColor="@color/main_title_background"
            app:layout_heightPercent="75%h"
            app:layout_marginRightPercent="3%w"
            app:layout_textSizePercent="40%h"
            app:layout_widthPercent="200%h" />

    </com.zhy.android.percent.support.PercentRelativeLayout>

    <!-- Roaming -->
    <com.zhy.android.percent.support.PercentRelativeLayout
        android:id="@+id/rl_roaming"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_setTimeLimit"
        app:layout_heightPercent="7%h"
        app:layout_marginLeftPercent="3%w"
        app:layout_marginRightPercent="3%w">

        <TextView
            android:id="@+id/enable_roaming_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/usage_setting_roaming"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_textSizePercent="40%h" />

        <Button
            android:id="@+id/enable_roaming_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/switch_off"
            android:clickable="true"
            app:layout_heightPercent="7%w"
            app:layout_widthPercent="14%w" />

    </com.zhy.android.percent.support.PercentRelativeLayout>

    <!-- Roaming des -->
    <TextView
        android:id="@+id/enable_roaming_descrition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_roaming"
        android:text="@string/roaming_descrition"
        android:textColor="@color/gray11"
        app:layout_marginLeftPercent="3%w"
        app:layout_marginRightPercent="3%w"
        app:layout_textSizePercent="2.5%h" />

    <!-- error ui -->
    <com.zhy.android.percent.support.PercentRelativeLayout
        android:id="@+id/rl_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title_layout"
        android:background="@color/white"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/setting_upgrade_no_connection"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_textSizePercent="4%h" />
    </com.zhy.android.percent.support.PercentRelativeLayout>

</com.zhy.android.percent.support.PercentRelativeLayout>
