<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/inquire_dialog"
    android:layout_width="320dip"
    android:layout_height="187dip"
    android:background="@drawable/dialog_bg" >

    <LinearLayout
        android:id="@+id/inquire_top_layout"
        android:layout_width="fill_parent"
        android:layout_height="45dip"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            
            
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/confirm_folder_replace"
                android:textSize="16sp"
                android:textStyle="bold"  
                android:textColor="@color/color_black"/>
            
        </RelativeLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@color/color_divider" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/inquire_content_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inquire_top_layout" >

        <TextView
            android:id="@+id/inquire_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dip"
            android:layout_marginStart="20dip"
            android:layout_marginEnd="20dip"
            android:layout_marginBottom="20dip"
            android:text="@string/confirm_folder_content"
            android:gravity="left"
            android:textSize="14sp"
            android:textColor="@color/color_black" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="60dip"
        android:layout_centerHorizontal="true" 
        android:layout_below="@id/inquire_content_layout"
        android:orientation="horizontal" >   
        <TextView 
	        android:id="@+id/txtHide" 
	        android:layout_width="25dip" 
	        android:layout_height="1dip"  
           	android:layout_centerHorizontal="true" />
        <Button
            android:id="@+id/inquire_btn"
            android:layout_width="wrap_content"
            android:layout_height="30dip"
            android:minWidth="80dip"
            android:gravity="center"
			android:layout_toStartOf="@id/txtHide"
			android:layout_centerVertical="true"
            android:background="@drawable/selector_common_button"
            android:text="@string/yes"
            android:textColor="@drawable/common_button_text"/>
        <Button
            android:id="@+id/close_btn"
            android:layout_width="80dip"
		    android:layout_height="30dip"
	        android:layout_toEndOf="@id/txtHide"
	        android:layout_centerVertical="true"
	        android:background="@drawable/selector_common_button"
	        android:text="@string/cancel"
	        android:textColor="@drawable/common_button_text" />
    </RelativeLayout>

</RelativeLayout>